--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 
 /* ==== SECTIONS ==== */
 .about-section {
-  background-color: #ffffff;
+  background-color: #000000;
   padding: 80px 0;
 }
 .experience-section {
